<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond_boulangerie"
    android:visibility="visible"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/titreMaisonGil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="Maison Gil"
        android:textColor="@color/texte_fonce"
        android:textSize="48sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <LinearLayout
        android:id="@+id/layoutBarreHaut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/titreMaisonGil">

        <EditText
            android:id="@+id/barreRecherche"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/barre_recherche"
            android:hint="Recherche"
            android:inputType="text"
            android:paddingStart="16dp"
            android:textColorHint="#9E9E9E" />

        <ImageView
            android:id="@+id/imagePanier"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/panier" />

        <ImageButton
            android:id="@+id/boutonHistorique"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Voir l'historique"
            android:padding="8dp"
            android:src="@android:drawable/ic_menu_recent_history"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCategories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="46dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutBarreHaut"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/boutonPain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/tuile_categorie"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_pain" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="Pains"
                android:textColor="@color/texte_fonce"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/boutonViennoiserie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/tuile_categorie"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_croissants" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="Viennoiseries"
                android:textColor="@color/texte_fonce"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/boutonPatisserie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/tuile_categorie"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_gateau" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="Pâtisseries"
                android:textColor="@color/texte_fonce"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/boutonRetour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#A19182"
        android:text="Retour"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutBarreHaut" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewProduits"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boutonRetour"
        tools:listitem="@layout/item_produit" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPanier"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5"
        android:elevation="10dp"
        android:padding="16dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/titrePanier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Commande en cours"
            android:textColor="@color/texte_fonce"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/boutonFermerPanier"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@drawable/croix"
            app:layout_constraintBottom_toBottomOf="@id/titrePanier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/titrePanier"
            app:tint="@color/texte_fonce" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPanier"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/layoutTotalPanier"
            app:layout_constraintTop_toBottomOf="@id/titrePanier"
            tools:listitem="@layout/item_panier" />

        <LinearLayout
            android:id="@+id/layoutTotalPanier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="end"
            android:orientation="horizontal"

            app:layout_constraintBottom_toTopOf="@id/boutonAnnulerPanier">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TOTAL : "
                android:textColor="@color/texte_fonce"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/texteTotalFinal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00 $"
                android:textColor="@color/texte_fonce"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/boutonValiderPanier"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#4CAF50"
            android:text="VALIDER LA VENTE"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/boutonAnnulerPanier"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#E53935"
            android:text="Annuler la commande"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/boutonValiderPanier" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>