...
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_marginStart="16dp">

    <TextView
        android:id="@+id/texteNomProduit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Nom du Produit"
        android:textColor="@color/texte_fonce"
        android:textSize="20sp"
        android:textStyle="bold"
...
